[gd_scene load_steps=12 format=2]

[ext_resource path="res://Assets/grabber.png" type="Texture" id=1]
[ext_resource path="res://Assets/background.png" type="Texture" id=2]
[ext_resource path="res://Assets/scrollbg.png" type="Texture" id=3]
[ext_resource path="res://Assets/title.png" type="Texture" id=4]
[ext_resource path="res://Scripts/TitleUI.gd" type="Script" id=5]
[ext_resource path="res://Scripts/SettingsUI.gd" type="Script" id=6]
[ext_resource path="res://Resources/Font.tres" type="DynamicFont" id=7]
[ext_resource path="res://Resources/buttons.tres" type="Theme" id=8]

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxEmpty" id=3]

[sub_resource type="StyleBoxEmpty" id=4]

[node name="MainMenu" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
texture = ExtResource( 2 )
expand = true
stretch_mode = 1

[node name="TitleUI" type="Control" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 5 )

[node name="Buttons" type="VBoxContainer" parent="TitleUI"]
margin_left = 390.0
margin_top = 266.0
margin_right = 890.0
margin_bottom = 686.0
rect_min_size = Vector2( 400, 0 )
custom_constants/separation = 30

[node name="Play" type="Button" parent="TitleUI/Buttons"]
margin_right = 500.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 8 )
theme_type_variation = "Base"
custom_fonts/font = ExtResource( 7 )
text = "Play"

[node name="Settings" type="Button" parent="TitleUI/Buttons"]
margin_top = 150.0
margin_right = 500.0
margin_bottom = 270.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 8 )
theme_type_variation = "Base"
custom_fonts/font = ExtResource( 7 )
text = "Settings"

[node name="Quit" type="Button" parent="TitleUI/Buttons"]
margin_top = 300.0
margin_right = 500.0
margin_bottom = 420.0
rect_min_size = Vector2( 0, 120 )
theme = ExtResource( 8 )
theme_type_variation = "Base"
custom_fonts/font = ExtResource( 7 )
text = "Quit"

[node name="Title" type="Sprite" parent="TitleUI"]
position = Vector2( 626, 128 )
scale = Vector2( 0.472043, 0.472043 )
texture = ExtResource( 4 )

[node name="SettingsUI" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsUI"]
margin_left = 214.0
margin_top = 26.0
margin_right = 1076.0
margin_bottom = 596.0
alignment = 1

[node name="WindowType" type="HBoxContainer" parent="SettingsUI/VBoxContainer"]
margin_top = 63.0
margin_right = 862.0
margin_bottom = 177.0
custom_constants/separation = 50

[node name="Fullscreen" type="Button" parent="SettingsUI/VBoxContainer/WindowType"]
margin_right = 400.0
margin_bottom = 114.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
theme = ExtResource( 8 )
theme_type_variation = "Activated"
enabled_focus_mode = 0
text = "Fullscreen"

[node name="Windowed" type="Button" parent="SettingsUI/VBoxContainer/WindowType"]
margin_left = 450.0
margin_right = 850.0
margin_bottom = 114.0
rect_min_size = Vector2( 400, 0 )
focus_mode = 0
theme = ExtResource( 8 )
theme_type_variation = "Deactivated"
enabled_focus_mode = 0
text = "Windowed"

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsUI/VBoxContainer"]
margin_top = 181.0
margin_right = 862.0
margin_bottom = 287.0

[node name="Label" type="Label" parent="SettingsUI/VBoxContainer/HBoxContainer"]
margin_right = 242.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 106 )
theme = ExtResource( 8 )
text = "Main Volume"

[node name="Scrollbg" type="Sprite" parent="SettingsUI/VBoxContainer/HBoxContainer"]
position = Vector2( 548, 50 )
scale = Vector2( 0.691566, 0.489362 )
texture = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="SettingsUI/VBoxContainer/HBoxContainer"]
margin_left = 246.0
margin_right = 846.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
value = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="SettingsUI/VBoxContainer"]
margin_top = 291.0
margin_right = 862.0
margin_bottom = 397.0

[node name="Label" type="Label" parent="SettingsUI/VBoxContainer/HBoxContainer2"]
margin_right = 242.0
margin_bottom = 106.0
rect_min_size = Vector2( 242, 106 )
theme = ExtResource( 8 )
text = "Sound"

[node name="Scrollbg" type="Sprite" parent="SettingsUI/VBoxContainer/HBoxContainer2"]
position = Vector2( 548, 50 )
scale = Vector2( 0.691566, 0.489362 )
texture = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="SettingsUI/VBoxContainer/HBoxContainer2"]
margin_left = 246.0
margin_right = 846.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
value = 50.0

[node name="HBoxContainer3" type="HBoxContainer" parent="SettingsUI/VBoxContainer"]
margin_top = 401.0
margin_right = 862.0
margin_bottom = 507.0

[node name="Label" type="Label" parent="SettingsUI/VBoxContainer/HBoxContainer3"]
margin_right = 242.0
margin_bottom = 106.0
rect_min_size = Vector2( 242, 0 )
theme = ExtResource( 8 )
text = "Music"

[node name="Scrollbg" type="Sprite" parent="SettingsUI/VBoxContainer/HBoxContainer3"]
position = Vector2( 548, 50 )
scale = Vector2( 0.691566, 0.489362 )
texture = ExtResource( 3 )

[node name="HSlider" type="HSlider" parent="SettingsUI/VBoxContainer/HBoxContainer3"]
margin_left = 246.0
margin_right = 846.0
margin_bottom = 100.0
rect_min_size = Vector2( 600, 100 )
custom_icons/grabber_highlight = ExtResource( 1 )
custom_icons/grabber = ExtResource( 1 )
custom_styles/slider = SubResource( 2 )
custom_styles/grabber_area_highlight = SubResource( 3 )
custom_styles/grabber_area = SubResource( 4 )
value = 50.0

[node name="SBack" type="Button" parent="SettingsUI"]
margin_left = 454.0
margin_top = 584.0
margin_right = 854.0
margin_bottom = 690.0
rect_min_size = Vector2( 400, 106 )
size_flags_horizontal = 2
size_flags_vertical = 2
theme = ExtResource( 8 )
theme_type_variation = "Base"
text = "Back"

[connection signal="hide" from="TitleUI" to="SettingsUI" method="_on_TitleUI_hide"]
[connection signal="pressed" from="TitleUI/Buttons/Play" to="TitleUI" method="_on_Play_pressed"]
[connection signal="pressed" from="TitleUI/Buttons/Settings" to="TitleUI" method="_on_Settings_pressed"]
[connection signal="pressed" from="TitleUI/Buttons/Quit" to="TitleUI" method="_on_Quit_pressed"]
[connection signal="hide" from="SettingsUI" to="TitleUI" method="_on_SettingsUI_hide"]
[connection signal="pressed" from="SettingsUI/VBoxContainer/WindowType/Fullscreen" to="SettingsUI" method="_on_Fullscreen_pressed"]
[connection signal="pressed" from="SettingsUI/VBoxContainer/WindowType/Windowed" to="SettingsUI" method="_on_Windowed_pressed"]
[connection signal="pressed" from="SettingsUI/SBack" to="SettingsUI" method="_on_SBack_pressed"]
